--- a/src/Components/List/ItemsList.css
+++ b/src/Components/List/ItemsList.css
@@ -2,11 +2,21 @@
     width: 90%;
     max-width: 60rem;
     margin: 2rem auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
 }
 
-.list ul {
+/* .list ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    /* display: inline-flexbox; */
+    display: inline-flexbox;
+} */
+
+.eachItem{
+    padding: 40px;
+    flex: 1 1 calc(50% - 16px);
+    border: 1px solid #b8a8a8;
+    background-color: rgb(252, 251, 251);
 }
